--- a/WeCrowd/Base.lproj/CampaignFlow.storyboard
+++ b/WeCrowd/Base.lproj/CampaignFlow.storyboard
@@ -206,26 +206,27 @@
         <scene sceneID="xxs-ja-3GE">
             <objects>
                 <tableViewController id="tkk-YJ-SKn" customClass="WCCampaignFeedViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="308" sectionHeaderHeight="22" sectionFooterHeight="22" id="C3h-SM-41T">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="300" sectionHeaderHeight="22" sectionFooterHeight="22" id="C3h-SM-41T">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.92662957700000004" green="0.92662957700000004" blue="0.92662957700000004" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CampaignCell" id="9cm-Ju-3W6" customClass="WCCampaignTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9cm-Ju-3W6" id="QvT-W9-jCc">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4d-1F-fLo">
+                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V4d-1F-fLo">
                                             <rect key="frame" x="8" y="16" width="584" height="284"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Campaign Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLd-Vo-gKT">
-                                                    <rect key="frame" x="8" y="204" width="576" height="20"/>
+                                                    <rect key="frame" x="8" y="208" width="576" height="20"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VgR-Jp-vGB">
-                                                    <rect key="frame" x="8" y="232" width="71" height="21"/>
+                                                    <rect key="frame" x="8" y="236" width="71" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -245,17 +246,18 @@
                                                     </variation>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Donation Progress" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQo-be-iPb">
-                                                    <rect key="frame" x="95" y="232" width="142" height="21"/>
+                                                    <rect key="frame" x="87" y="236" width="142" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.32944389029999999" green="0.80239898990000003" blue="0.3813414343" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="OQo-be-iPb" firstAttribute="leading" secondItem="VgR-Jp-vGB" secondAttribute="trailing" constant="16" id="9qp-bt-vNG"/>
+                                                <constraint firstItem="OQo-be-iPb" firstAttribute="leading" secondItem="VgR-Jp-vGB" secondAttribute="trailing" constant="8" id="9qp-bt-vNG"/>
                                                 <constraint firstItem="gLd-Vo-gKT" firstAttribute="leading" secondItem="V4d-1F-fLo" secondAttribute="leading" constant="8" id="CAE-Qq-PsG"/>
                                                 <constraint firstAttribute="trailing" secondItem="mlu-an-yCV" secondAttribute="trailing" id="DKQ-Wl-d6P"/>
-                                                <constraint firstItem="gLd-Vo-gKT" firstAttribute="top" secondItem="mlu-an-yCV" secondAttribute="bottom" constant="4" id="Efz-ty-9NG"/>
+                                                <constraint firstItem="gLd-Vo-gKT" firstAttribute="top" secondItem="mlu-an-yCV" secondAttribute="bottom" constant="8" id="Efz-ty-9NG"/>
                                                 <constraint firstItem="mlu-an-yCV" firstAttribute="top" secondItem="V4d-1F-fLo" secondAttribute="top" id="JuH-cI-92c"/>
                                                 <constraint firstAttribute="trailing" secondItem="gLd-Vo-gKT" secondAttribute="trailing" id="MDn-WO-YiM"/>
                                                 <constraint firstItem="OQo-be-iPb" firstAttribute="centerY" secondItem="VgR-Jp-vGB" secondAttribute="centerY" id="WZF-1Z-eFB"/>
